# AutoDataGen

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGES.md  README.md  RTX5080_fix.txt  autosim_improvement_plan.md  pyproject.toml  record.md
source/autosim/: pyproject.toml
source/autosim/autosim/: __init__.py
source/autosim/autosim/calibration/: __init__.py  plan_sweep.py  pose_sampler.py
source/autosim/autosim/capabilities/: __init__.py
source/autosim/autosim/capabilities/motion_planning/: __init__.py
source/autosim/autosim/capabilities/motion_planning/curobo/: curobo_planner.py  curobo_planner_cfg.py
source/autosim/autosim/capabilities/navigation/: __init__.py  occupancy_map.py
source/autosim/autosim/capabilities/navigation/a_star/: a_star_planner.py  a_star_planner_cfg.py
source/autosim/autosim/capabilities/navigation/dwa/: dwa_planner.py  dwa_planner_cfg.py
source/autosim/autosim/core/: __init__.py  action_adapter.py  decomposer.py  logger.py  pipeline.py  registration.py  skill.py  types.py
source/autosim/autosim/decomposers/: __init__.py
source/autosim/autosim/decomposers/llm_decomposer/: llm_decomposer.py  llm_decomposer_cfg.py
source/autosim/autosim/skills/: __init__.py  base_skill.py  gripper.py  navigate.py  reach.py  relative_reach.py
source/autosim/autosim/utils/: debug_util.py
source/autosim_examples/: pyproject.toml
source/autosim_examples/autosim_examples/: __init__.py
source/autosim_examples/autosim_examples/autosim/: __init__.py
source/autosim_examples/autosim_examples/autosim/action_adapters/: franka_adapter.py  franka_adapter_cfg.py
source/autosim_examples/autosim_examples/autosim/pipelines/: franka_lift_cube.py
source/autosim_examples/autosim_examples/isaaclab_task/: __init__.py  franka_lift_cube_cfg.py
(+3 files in other folders)
